[Extensions] Update installed bubble for extensions with synthesized actions

Extensions with synthesized actions shouldn't get the "How to use" text.

BUG=592106

Review URL: https://codereview.chromium.org/1778603003

Cr-Commit-Position: refs/heads/master@{#380161}

Former-commit-id: 0a95746da777d05038504582018366c4738c5ae7