chrome/common/extensions/api/extension_action/action_info.cc
@@ -45,8 +45,7 @@ static const ActionInfo* GetActionInfo(const Extension* extension,
 
 }  // namespace
 
-ActionInfo::ActionInfo() {
-}
+ActionInfo::ActionInfo() : synthesized(false) {}
 
 ActionInfo::ActionInfo(const ActionInfo& other) = default;
 
